`Lectures': Use order of units when merging pdf files